# ThreeDimensionalSpaceEngine

./: CMakeLists.txt  README.md  color.txt  main.cpp
app/: App.cpp  App.h  Buffer.h  Color.h  Helper.h  IMaterial.h  Material.h  Render.h  Render3D.h  Renderer.h  Renderer2D.h  ShaderMethods.cpp  ShaderMethods.h  ShapeGeneration.h  Texture.cpp  Texture.h  TexturedShape.cpp  TexturedShape.h  Transform.h  VertexArray.cpp  VertexArray.h
app/materials/: ColorMaterial.cpp  ColorMaterial.h  TextureMaterial.cpp  TextureMaterial.h
app/materials2D/: ColorMaterial.cpp  ColorMaterial.h  TextureMaterial.cpp  TextureMaterial.h
app/materials3D/: ColorMaterial3D.cpp  ColorMaterial3D.h  IMaterial3D.cpp  IMaterial3D.h
helper/: Direction.h  HelperVector.cpp  HelperVectors.h  VecSpherical.cpp  VecSpherical.h
include/: glad.c
include/glad/: glad.h
math_physics/: HelperVectors.h  VecSpherical.cpp  VecSpherical.h
res/shaders/: basic.glsl
resources/shaders/: color_shader.glsl  texture_shader.glsl
resources/shaders/2D/: testing_shader.glsl  texture_shader.glsl
resources/shaders/3D/: color_shader3D.glsl
shaders/: basic.shader  testing.fs  testing.vs
